--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.0.0",
-    "next": "12.0.4",
+    "next": "^12.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.5",
