--- a/.github/workflows/pw.deploy.yaml
+++ b/.github/workflows/pw.deploy.yaml
@@ -34,5 +34,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          branch: site
+          branch: gh-pages
           folder: out
